[package]
name = "fson"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Flexible Serialized Object Notation"
repository = "https://github.com/zalupa35/fson"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.7.4"
pest_derive = "2.7.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"